add_library(dile_vdec_direct SHARED src/dile_vdec_direct.c)
set_target_properties(dile_vdec_direct PROPERTIES SOVERSION 1)
target_include_directories(dile_vdec_direct PUBLIC include)

add_library(dile_audio_direct SHARED src/dile_audio_direct.c)
set_target_properties(dile_audio_direct PROPERTIES SOVERSION 1)
target_include_directories(dile_audio_direct PUBLIC include)